# TCPL

./: .gitignore  CMakeLists.txt  ch01.c  ch02.c  ch03.c  ch04.c  ch05.c
ch04_calculator/: calculator.c  getch.c  stack.c  stack_.c
ch04_calculator_reorg/: calc.h  calculator.c  diffs to ch04_calculator.txt  getch.c  getop.c  main.c  stack.c
ch05_calculator_cli/: calc.h  calculator.c  diffs to ch04_calculator_reorg.txt  getop.c  main.c  stack.c
data/: random_text.txt
